--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BitCoin-Grafik</string>
+    <string name="fetching_data">Fetching Data...</string>
+    <string name="data_fetched">Data Fetched.</string>
+    <string name="refresh">Refresh</string>
 </resources>
